<?xml version="1.0"?>
<package >
  <name>Lidar_process</name>
  <version>0.0.0</version>
  <description>The Lidar_process package</description>

  <maintainer email="zhang@todo.todo">zhang</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>  
  <build_depend>rosbag</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>

  <export>

  </export>
</package>
